remove fixed width, add more whitespace

--- a/sass/_posts.scss
+++ b/sass/_posts.scss
@@ -1,34 +1,47 @@
 .post {
-  margin: 2em 0
+
+  margin: 2em;
+
+  h1,h2,h3,h4 {
+  margin-bottom: 1em;
+  }
+
+  p,ul,pre {
+  margin-bottom:1.5em;
+  }
+
+  h1 {
+  color:#2ecbd6;
+  font-size:2.25em;
+  font-weight:700;
+  text-align:center
+  }
+
+  h2 {
+  font-size:150%
+  }
+
+  p {
+  line-height:125%;
+  }
+
+  ul {
+  line-height:125%;
+  list-style-type:disc;
+  margin-left:1em;
+  }
+
+  li {
+  margin-left:1em;
+  list-style-position: inside;
+  }
+
 }
 
-.post h1 {
-color:#2ecbd6;
-font-size:2.25em;
-font-weight:700;
-margin-bottom:1.5em;
-text-align:center
-}
+.col-4 {
+  -moz-column-count: 4;
+  -webkit-column-count: 4;
+  column-count: 4; }
 
-.post p {
-line-height:125%;
-text-align:left;
-margin-bottom:1.5em;
-}
-
-.post h2 {
-text-align:left;
-margin-bottom:1.5em;
-font-size:150%
-}
-
-.post ul {
-line-height:125%;
-list-style-type:disc;
-margin-left:1em;
-margin-bottom:1em
-}
-
-.post li {
-margin-left:1em
-}
+.col-3 > li {
+  display: block; }
