--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,18 +11,3 @@ line-height:1.125em
 @import 'home/_index.scss';
 @import '_posts.scss';
 @import '_solarized-light.scss';
-
-/* JamieMason temp additions */
-.post ul,
-.post pre,
-.post h2,
-.post h3 {
-  margin-bottom: 1em; }
-
-.col-4 {
-  -moz-column-count: 4;
-  -webkit-column-count: 4;
-  column-count: 4; }
-
-.col-3 > li {
-  display: block; }
